apps/base/oauth/pocketid/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocketid
  namespace: oauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pocketid
  template:
    metadata:
      labels:
        app: pocketid
    spec:
      containers:
        - name: pocketid
          image: ghcr.io/pocket-id/pocket-id:v2.17.0
          ports:
            - containerPort: 1411
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
