apps/base/oauth/pocketid/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocketid-tls-route
  namespace: oauth
spec:
  parentRefs:
  - name: tls-gateway
    namespace: gateway
  hostnames:
  - "id.lan.${DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: pocketid
      port: 1411
